--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
 			<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 			<sonar.language>java</sonar.language>
 
+			<sonar.organization>kyleorr6b6f</sonar.organization>
+			<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
 	</properties>
+
 	<dependencies>
 
 		<dependency>
